exports[`UserTimeDiffFormat component created time today 1`] = `
<span
  className={null}
  data-title={null}>
  12:25 PM
</span>
`;

exports[`UserTimeDiffFormat component created time tomorrow 1`] = `
<span
  className={null}
  data-title={null}>
  tommorrow 12:25 PM
</span>
`;

exports[`UserTimeDiffFormat component created time within 7 days 1`] = `
<span
  className={null}
  data-title={null}>
  5 days 23 hours ago
</span>
`;

exports[`UserTimeDiffFormat component created time within pattern 1`] = `
<span
  className={null}
  data-title={null}>
  5 days 23 hours ago
</span>
`;

exports[`UserTimeDiffFormat component created time yesterday 1`] = `
<span
  className={null}
  data-title={null}>
  yesterday 12:25 PM
</span>
`;
